--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "license": "MIT",
   "scripts": {
     "dev": "npx nodemon --exec ts-node src/index.ts",
-    "typeorm": "npx ts-node ./node_modules/typeorm/cli.js"
+    "typeorm": "npx ts-node ./node_modules/typeorm/cli.js",
+    "migration:create": "typeorm migration:create -n CreateUsersTable",
+    "migration:run": "npx ts-node ./node_modules/typeorm/cli.js migration:run"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
